<resources>
    <string name="app_name">RateMyDoctor</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="phone_no">Phone Number</string>
    <string name="name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="submit">SUBMIT</string>
    <string name="logout">Logout</string>
    <string name="doctor_name">Doctors Name</string>
    <string name="doctor_speciality">Speciality</string>
    <string name="doctor_address">Hospital</string>
    <string name="doctor_number">Phone Number</string>
    <string name="signup_login">SignUp or Login</string>
    <string name="comments">Comments</string>
    <string name="search_doctor">Search For Doctor</string>
</resources>
